--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,19 @@
 {
     "name": "emanuelmart/dolar-arg",
-    "type": "library",
     "description": "Cotización actual del dólar en Argentina - según el BNA",
-    "keywords": ["valor", "dolar", "argentina", "banco"],
-    "homepage": "https://github.com/EmanuelM/dolar-arg",
-    "license": "MIT",
     "authors": [
         {
             "name": "Emanuel Martinez",
             "email": "emanuelmartinezw@hotmail.com"
         }
     ],
-    "require-dev": {
+    "license": "MIT",
+    "require": {
         "fabpot/goutte": "^4.0"
     },
     "autoload": {
-        "classmap": ["src"]
+        "psr-4": {
+            "DolarArg\\": "src"
+        }
     }
 }
